Fixed bobbing website on mobile

--- a/style.css
+++ b/style.css
@@ -266,3 +266,16 @@ footer {
   margin: 0;
 }
 
+#typewriter-container {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#typewriter {
+  display: inline-block;
+  white-space: nowrap;
+}
+
